# cookiecutter-megadrive

./: .gitignore  cookiecutter.json
{{cookiecutter.directory_name}}/: .gitignore  CMakeLists.txt  Dockerfile  README.rst
{{cookiecutter.directory_name}}/src/: header.asm  interrupts.asm  level.asm  link.ld  main.asm  resources.json  util.asm
{{cookiecutter.directory_name}}/src/assets/: tiles#tiles-palette.pal  tiles._tiles.pmp#layer~Layer 2#map001.csv
{{cookiecutter.directory_name}}/src/include/: constants.inc  memory_map.inc
{{cookiecutter.directory_name}}/src/z80/: init.z80
{{cookiecutter.directory_name}}/tools/: build_resources.py
